--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,13 +8,9 @@
     <title>Document</title>
     <link href="/dist/output.css" rel="stylesheet">
 </head>
-<body>
-    <div class="flex gap-6">
-        <img src=".\img\jose-ignacio-pompe-kLGnN8AlEZc-unsplash.jpg" alt="" srcset="" class="w-1/3 h-screen">
-        <h1>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up now to get started.
 
-        You know <em>what</em> to do
-        </h1>
-    </div>
+<body>
+    <div class="text-5xl">Hello, World!!</div>
 </body>
+
 </html>
