--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,73 @@
     <link href="/dist/output.css" rel="stylesheet">
 </head>
 
-<body>
-    <div class="text-5xl">Hello, World!!</div>
+<body class="flex bg-slate-200">
+    <img src=".\img\jose-ignacio-pompe-kLGnN8AlEZc-unsplash.jpg" alt="" srcset="" class="w-1/3 h-screen">
+    <div class="flex flex-col mt-28 gap-y-16">
+        <div class="px-24">
+            <div class="text-4xl font-semibold">
+                This is not a real online service! You know you need something like this in your life to help you
+                realize
+                your deepest dreams.
+            </div>
+
+            <div class="text-4xl mt-20">
+                You know you want to.
+            </div>
+        </div>
+
+        <form action="#" method="post" class="px-20 border border-y-slate-500">
+            <fieldset class="flex gap-x-46">
+                <legend class="text-5xl font-bold mb-8">Let's do this!</legend>
+                <div class="container">
+                    <label for="firstName" class="text-sm">FIRST NAME</label>
+                    <div>
+                        <input type="text" class="" id="firstName">
+                    </div>
+                </div>
+                <div class="container">
+                    <label for="lastName" class="text-sm">LAST NAME</label>
+                    <div>
+                        <input type="text" class="" id="lastName">
+                    </div>
+                </div>
+
+            </fieldset>
+            <fieldset class="flex gap-x-46">
+                <div class="container">
+                    <label for="emailAdd" class="text-sm">EMAIL</label>
+                    <div>
+                        <input type="email" name="" id="emailAdd">
+                    </div>
+                </div>
+                <div class="container">
+                    <label for="phoneNum" class="text-sm">PHONE NUMBER</label>
+                    <div>
+                        <input type="email" name="" id="phoneNum">
+                    </div>
+                </div>
+
+            </fieldset>
+            <fieldset class="flex gap-x-46 mb-20">
+                <div class="container">
+                  <label for="password" class="text-sm">PASSWORD</label>
+                <div>
+                    <input type="email" name="" id="password">
+                </div>  
+                </div>
+                <div class="container">
+                   <label for="confirmPass" class="text-sm">CONFIRM PASSWORD</label>
+                <div>
+                    <input type="email" name="" id="confirmPass">
+                </div> 
+                </div>
+                
+            </fieldset>
+        </form>
+
+
+
+    </div>
 </body>
 
 </html>
